...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/result_lyt"
                style="@style/CustomCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-black"
                        android:textSize="20sp"
                        android:textStyle="normal"
...
                    <!--                    android:layout_gravity="center_horizontal"-->
                    <!--                    android:contentDescription="@string/result"-->
                    <!--                    android:visibility="gone"-->
                    <!--                    tools:visibility="visible" />-->

                    <TextView
                        android:id="@+id/value_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:fontFamily="sans-serif-medium"
                        android:textIsSelectable="false"
...
                        android:layout_gravity="center_horizontal"
                        android:background="#FF8747"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/result_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/result_image" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
...
                            android:layout_marginEnd="8dp"
                            android:text=":"
                            android:textSize="17sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/error_margin_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            tools:text="0.5" />
...
