<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instruction_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <include layout="@layout/app_bar_layout" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/color_extract_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#000"
        android:paddingTop="4dp"
        android:paddingBottom="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:lineSpacingExtra="3dp"
        android:text="@string/confirm_color_extract"
        android:textColor="#ddd"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/redo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:minWidth="200dp"
        android:padding="10dp"
        android:text="@string/redo"
        android:textSize="17sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accept_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:minWidth="200dp"
        android:padding="10dp"
        android:text="@string/continue_on"
        android:textSize="17sp" />
</LinearLayout>