<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/value_or_blank_if_unknown"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:labelFor="@+id/editExpectedValue"
        android:text="@string/enter_expected_value"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editExpectedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:minWidth="150dp"
        android:textAlignment="center"
        android:textColor="?android:textColor"
        android:textSize="30sp" />

</LinearLayout>
