<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_ui_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BarcodeActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/card_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".6"
        android:src="@drawable/card_large_overlay" />

    <io.ffem.lite.widget.VerticalTextView
        android:id="@+id/bottom_overlay"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:text="@string/place_color_card"
        android:textAlignment="center"
        android:textColor="#EEEEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <io.ffem.lite.widget.VerticalTextView
        android:id="@+id/top_overlay"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:text="@string/scanning"
        android:textColor="#EEEEEE"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>